--- a/drone-convert-dhall.cabal
+++ b/drone-convert-dhall.cabal
@@ -21,3 +21,13 @@ executable drone-convert-dhall
   hs-source-dirs:   src
   build-depends:    base >=4.7 && <5
   default-language: Haskell2010
+
+test-suite test
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   tests
+  main-is:          Main.hs
+  build-depends:
+    , base   >=4     && <5
+    , tasty  >=1.3.1
+    , tasty-hspec
