--- a/drone-convert-dhall.cabal
+++ b/drone-convert-dhall.cabal
@@ -16,6 +16,14 @@ source-repository head
   type:     git
   location: git://github.com/Pr0Ger/drone-convert-dhall.git
 
+library drone-dhall
+  default-language: Haskell2010
+  hs-source-dirs:   src
+  exposed-modules:  DroneDhall.Models
+  build-depends:
+    , aeson
+    , base   >=4.7 && <5
+
 executable drone-convert-dhall
   main-is:          Main.hs
   hs-source-dirs:   src
@@ -27,7 +35,10 @@ test-suite test
   default-language: Haskell2010
   hs-source-dirs:   tests
   main-is:          Main.hs
+  other-modules:    Models
   build-depends:
-    , base   >=4     && <5
-    , tasty  >=1.3.1
+    , aeson
+    , base         >=4     && <5
+    , drone-dhall
+    , tasty        >=1.3.1
     , tasty-hspec
