--- a/drone-convert-dhall.cabal
+++ b/drone-convert-dhall.cabal
@@ -23,11 +23,23 @@ library drone-dhall
   build-depends:
     , aeson
     , base   >=4.7 && <5
+    , dhall
+    , dhall-yaml
+    , text
 
 executable drone-convert-dhall
   main-is:          Main.hs
   hs-source-dirs:   src
-  build-depends:    base >=4.7 && <5
+  build-depends:
+    , aeson
+    , base    >=4.7 && <5
+    , drone-dhall
+    , dhall-yaml
+    , scotty
+    , text
+    , wai-extra
+  other-modules: DroneDhall.Models
+
   default-language: Haskell2010
 
 test-suite test
