--- a/drone-convert-dhall.cabal
+++ b/drone-convert-dhall.cabal
@@ -1,56 +1,74 @@
-cabal-version: 3.0
-name:          drone-convert-dhall
-version:       0.1.0
-synopsis:      Add support for Drone pipelines configuration in dhall
-description:
-  A Drone plugin to convert *.dhall file to proper yaml description
+cabal-version: 1.12
 
-category:      Development
-author:        Sergey Petrov
-maintainer:    me@pr0ger.org
-license:       MIT
-license-file:  LICENSE
-tested-with:   GHC ==8.10.1
+-- This file has been generated from package.yaml by hpack version 0.34.4.
+--
+-- see: https://github.com/sol/hpack
+
+name:           drone-convert-dhall
+version:        0.1.0
+synopsis:       Add support for Drone pipelines configuration in dhall
+description:    A Drone plugin to convert *.dhall file to proper yaml description
+category:       Development
+homepage:       https://github.com/Pr0Ger/drone-convert-dhall#readme
+bug-reports:    https://github.com/Pr0Ger/drone-convert-dhall/issues
+author:         Sergey Petrov
+maintainer:     me@pr0ger.org
+license:        MIT
+license-file:   LICENSE
+build-type:     Simple
 
 source-repository head
-  type:     git
-  location: git://github.com/Pr0Ger/drone-convert-dhall.git
+  type: git
+  location: https://github.com/Pr0Ger/drone-convert-dhall
 
-library drone-dhall
-  default-language: Haskell2010
-  hs-source-dirs:   src
-  exposed-modules:  DroneDhall.Models
+library
+  exposed-modules:
+      DroneDhall.Models
+      DroneDhall.Signature
+  other-modules:
+      Paths_drone_convert_dhall
+  hs-source-dirs:
+      src
   build-depends:
-    , aeson
-    , base   >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , dhall
     , dhall-yaml
     , text
+  default-language: Haskell2010
 
 executable drone-convert-dhall
-  main-is:          Main.hs
-  hs-source-dirs:   src
+  main-is: Main.hs
+  other-modules:
+      DroneDhall.Models
+      DroneDhall.Signature
+      Paths_drone_convert_dhall
+  hs-source-dirs:
+      src
   build-depends:
-    , aeson
-    , base    >=4.7 && <5
-    , drone-dhall
+      aeson
+    , base >=4.7 && <5
     , dhall-yaml
+    , drone-convert-dhall
     , scotty
     , text
     , wai-extra
-  other-modules: DroneDhall.Models
-
   default-language: Haskell2010
 
-test-suite test
-  type:             exitcode-stdio-1.0
-  default-language: Haskell2010
-  hs-source-dirs:   tests
-  main-is:          Main.hs
-  other-modules:    Models
+test-suite drone-convert-dhall-test
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  other-modules:
+      Models
+      Signature
+      Paths_drone_convert_dhall
+  hs-source-dirs:
+      tests
   build-depends:
+      QuickCheck
     , aeson
-    , base         >=4     && <5
-    , drone-dhall
-    , tasty        >=1.3.1
+    , base >=4.7 && <5
+    , drone-convert-dhall
+    , tasty
     , tasty-hspec
+  default-language: Haskell2010
