--- a/.drone.yml
+++ b/.drone.yml
@@ -5,17 +5,6 @@ steps:
 - name: nix-build
   image: nixos/nix
   commands:
+  - nix-channel --add https://nixos.org/channels/nixpkgs-unstable nixpkgs
+  - nix-channel --update
   - nix-build
-- name: stack-test
-  image: haskell:latest
-  commands:
-  - stack setup
-  - stack test
-- name: test
-  image: haskell:8.10.1
-  commands:
-  - cabal update
-  - cabal install --only-dependencies
-  - cabal build --only-dependencies --enable-tests
-  - cabal build --enable-tests all
-  - cabal test all
