let's try to build & publish docker image

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,3 +6,14 @@ steps:
   image: nixos/nix
   commands:
   - nix-build
+- name: publish
+  image: plugins/drone
+  environment:
+    DOCKER_USER: pr0ger
+    DOCKER_PASS:
+      from_secret: docker_password
+  commands:
+  - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+  - docker load -i result
+  - docker push pr0ger/drone-convert-dhall:latest
+  - docker rmi pr0ger/drone-convert-dhall:latest
